tests/compile_fail/context_inter.stderr
error[E0495]: cannot infer an appropriate lifetime for lifetime parameter `'js` due to conflicting requirements
  --> $DIR/context_inter.rs:23:33
   |
23 |         let val: String = ctx_1.eval("'foo'").unwrap();
   |                                 ^^^^
   |
note: first, the lifetime cannot outlive the anonymous lifetime #2 defined on the body at 24:20...
  --> $DIR/context_inter.rs:24:20
   |
24 |           ctx_2.with(|ctx_2| {
   |  ____________________^
25 | |             let f: Function = ctx_2.eval("x => x + 'b'").unwrap();
26 | |             f.call::<_, ()>(val).unwrap();
27 | |         })
   | |_________^
note: ...but the lifetime must also be valid for the anonymous lifetime #2 defined on the body at 22:16...
  --> $DIR/context_inter.rs:22:16
   |
22 |       ctx_1.with(|ctx_1| {
   |  ________________^
23 | |         let val: String = ctx_1.eval("'foo'").unwrap();
24 | |         ctx_2.with(|ctx_2| {
25 | |             let f: Function = ctx_2.eval("x => x + 'b'").unwrap();
26 | |             f.call::<_, ()>(val).unwrap();
27 | |         })
28 | |     })
   | |_____^
note: ...so that the types are compatible
  --> $DIR/context_inter.rs:25:37
   |
25 |             let f: Function = ctx_2.eval("x => x + 'b'").unwrap();
   |                                     ^^^^
   = note: expected  `rquickjs::context::Ctx<'_>`
              found  `rquickjs::context::Ctx<'_>`
